fix(task-2): align grid layout with visual and semantic order

--- a/02/styles/global.css
+++ b/02/styles/global.css
@@ -3,6 +3,29 @@
     padding: 0;
     box-sizing: border-box;
 }
+  
+  body {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+        "a"
+        "b"
+        "c";
+    height: 100vh;
+    max-width: 1200px;
+}
+
+@media (min-width: 600px) {
+    body {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-areas:
+        "a a"
+        "b c";
+      grid-template-rows: 1fr 1fr;
+      margin: 0 auto;
+    }
+}
 
 .a, .b, .c {
     border: 3px solid transparent;
@@ -14,13 +37,16 @@
 }
 
 .a {
-    border-color: #ffffba
+    border-color: #ffffba;
+    grid-area: a;
 }
 
 .b {
     border-color: #ffdfba;
+    grid-area: b;
 }
 
 .c {
     border-color: #baffc9;
+    grid-area: c;
 }
